src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    DIFFERENT
    DIV
    DO
    DOWNTO
    FILE
    FOR
    GOTO
    GREATEROREQUAL
    IN
    KEYWORD
    LABEL
    LESSOREQUAL
    MOD
    MULTILINECOMMENTS
    NIL
    ONELINECOMMENTS
    PACKED
    RECORD
    REPEAT
    SET
    TO
    TYPE
    UNTIL
    WITH

Grammar

Rule 0     S' -> Programa
Rule 1     Dvariaveis -> VAR Listavariaveis
Rule 2     Atribuicao -> Atribuido : = Expressao
Rule 3     LocalInstsList -> LocalInstsList ; Instrucao
Rule 4     Condicao -> Condicao AND DeclaracaoCondicao
Rule 5     Condicao -> Condicao OR DeclaracaoCondicao
Rule 6     Condicao -> DeclaracaoCondicao
Rule 7     Condicao -> ( Condicao )
Rule 8     Dfuncao -> FUNCTION ID ArgumentosSetter : Tipo ; GlobalInsts BEGIN LocalInstsList END ;
Rule 9     InstrucaoCondicional -> IF Condicao THEN BlocoCondicional ParteElse
Rule 10    Duses -> USES UseList ;
Rule 11    Duses -> <empty>
Rule 12    Programa -> PROGRAM ID ; Duses GlobalInsts BlocoPrincipal .
Rule 13    Listavariaveis -> Listavariaveis Variaveis : Tipo ;
Rule 14    Listavariaveis -> <empty>
Rule 15    While -> WHILE
Rule 16    Atribuido -> ID
Rule 17    Atribuido -> Acesso_array
Rule 18    BlocoCondicional -> LocalInstsList
Rule 19    LocalInstsList -> LocalInstsList ;
Rule 20    UseList -> UseList , ID
Rule 21    UseList -> ID
Rule 22    Dprocedimento -> PROCEDURE ID ArgumentosProcedimentoOpc ; GlobalInsts BEGIN LocalInstsList END ;
Rule 23    GlobalInsts -> GlobalInsts GlobalInst
Rule 24    GlobalInsts -> <empty>
Rule 25    DeclaracaoCondicao -> Expressao SimboloCondicional Expressao
Rule 26    DeclaracaoCondicao -> NOT Condicao
Rule 27    DeclaracaoCondicao -> TRUE
Rule 28    DeclaracaoCondicao -> FALSE
Rule 29    ParteElse -> ELSE LocalInstsList
Rule 30    ParteElse -> <empty>
Rule 31    GlobalInst -> Dvariaveis
Rule 32    GlobalInst -> Dfuncao
Rule 33    GlobalInst -> Dprocedimento
Rule 34    LocalInstsList -> Instrucao
Rule 35    Variaveis -> Variaveis , ID
Rule 36    Variaveis -> ID
Rule 37    ArgumentosProcedimentoOpc -> ArgumentosSetter
Rule 38    ArgumentosProcedimentoOpc -> <empty>
Rule 39    Acesso_array -> Variavel_array [ Expressao ]
Rule 40    BlocoPrincipal -> BEGIN LocalInstsList END
Rule 41    Instrucao -> While
Rule 42    Instrucao -> InstrucaoCondicional
Rule 43    Instrucao -> Bloco
Rule 44    Instrucao -> Atribuicao
Rule 45    Instrucao -> Expressao
Rule 46    Variavel_array -> ID
Rule 47    Variavel_array -> Acesso_array
Rule 48    SimboloCondicional -> =
Rule 49    SimboloCondicional -> < >
Rule 50    SimboloCondicional -> < =
Rule 51    SimboloCondicional -> <
Rule 52    SimboloCondicional -> > =
Rule 53    SimboloCondicional -> >
Rule 54    Tipo -> Datatype
Rule 55    Tipo -> ARRAY [ Intervalo ] OF Datatype
Rule 56    Tipo -> ID
Rule 57    ArgumentosGetter -> ( ArgumentosGetterBuffer )
Rule 58    Bloco -> BEGIN LocalInstsList END
Rule 59    Expressao -> Expressao + Termo
Rule 60    Expressao -> Expressao - Termo
Rule 61    Expressao -> Termo
Rule 62    ArgumentosGetterBuffer -> ArgumentosGetterBuffer , Expressao
Rule 63    ArgumentosGetterBuffer -> Expressao
Rule 64    ArgumentosGetterBuffer -> <empty>
Rule 65    Intervalo -> INTEGER . . INTEGER
Rule 66    Termo -> Termo * Fator
Rule 67    Termo -> Termo / Fator
Rule 68    Termo -> Fator
Rule 69    ArgumentosSetter -> ( ArgumentosSetterBuffer )
Rule 70    Datatype -> REAL_TYPE
Rule 71    Datatype -> INTEGER_TYPE
Rule 72    Datatype -> STRING_TYPE
Rule 73    Datatype -> BOOLEAN_TYPE
Rule 74    Datatype -> CHAR_TYPE
Rule 75    ArgumentosSetterBuffer -> ArgumentosSetterBuffer , Argumento
Rule 76    ArgumentosSetterBuffer -> Argumento
Rule 77    ArgumentosSetterBuffer -> <empty>
Rule 78    Fator -> ID
Rule 79    Fator -> REAL
Rule 80    Fator -> INTEGER
Rule 81    Fator -> STRING
Rule 82    Fator -> TRUE
Rule 83    Fator -> FALSE
Rule 84    Fator -> ( Expressao )
Rule 85    Fator -> Condicao
Rule 86    Fator -> Acesso_array
Rule 87    Argumento -> ModificadorArgumento ID : Tipo
Rule 88    ModificadorArgumento -> VAR
Rule 89    ModificadorArgumento -> CONST
Rule 90    ModificadorArgumento -> <empty>
Rule 91    Fator -> ID ArgumentosGetter

Terminals, with rules where they appear

(                    : 7 57 69 84
)                    : 7 57 69 84
*                    : 66
+                    : 59
,                    : 20 35 62 75
-                    : 60
.                    : 12 65 65
/                    : 67
:                    : 2 8 13 87
;                    : 3 8 8 10 12 13 19 22 22
<                    : 49 50 51
=                    : 2 48 50 52
>                    : 49 52 53
AND                  : 4
ARRAY                : 55
BEGIN                : 8 22 40 58
BOOLEAN_TYPE         : 73
CASE                 : 
CHAR_TYPE            : 74
CONST                : 89
DIFFERENT            : 
DIV                  : 
DO                   : 
DOWNTO               : 
ELSE                 : 29
END                  : 8 22 40 58
FALSE                : 28 83
FILE                 : 
FOR                  : 
FUNCTION             : 8
GOTO                 : 
GREATEROREQUAL       : 
ID                   : 8 12 16 20 21 22 35 36 46 56 78 87 91
IF                   : 9
IN                   : 
INTEGER              : 65 65 80
INTEGER_TYPE         : 71
KEYWORD              : 
LABEL                : 
LESSOREQUAL          : 
MOD                  : 
MULTILINECOMMENTS    : 
NIL                  : 
NOT                  : 26
OF                   : 55
ONELINECOMMENTS      : 
OR                   : 5
PACKED               : 
PROCEDURE            : 22
PROGRAM              : 12
REAL                 : 79
REAL_TYPE            : 70
RECORD               : 
REPEAT               : 
SET                  : 
STRING               : 81
STRING_TYPE          : 72
THEN                 : 9
TO                   : 
TRUE                 : 27 82
TYPE                 : 
UNTIL                : 
USES                 : 10
VAR                  : 1 88
WHILE                : 15
WITH                 : 
[                    : 39 55
]                    : 39 55
error                : 

Nonterminals, with rules where they appear

Acesso_array         : 17 47 86
Argumento            : 75 76
ArgumentosGetter     : 91
ArgumentosGetterBuffer : 57 62
ArgumentosProcedimentoOpc : 22
ArgumentosSetter     : 8 37
ArgumentosSetterBuffer : 69 75
Atribuicao           : 44
Atribuido            : 2
Bloco                : 43
BlocoCondicional     : 9
BlocoPrincipal       : 12
Condicao             : 4 5 7 9 26 85
Datatype             : 54 55
DeclaracaoCondicao   : 4 5 6
Dfuncao              : 32
Dprocedimento        : 33
Duses                : 12
Dvariaveis           : 31
Expressao            : 2 25 25 39 45 59 60 62 63 84
Fator                : 66 67 68
GlobalInst           : 23
GlobalInsts          : 8 12 22 23
Instrucao            : 3 34
InstrucaoCondicional : 42
Intervalo            : 55
Listavariaveis       : 1 13
LocalInstsList       : 3 8 18 19 22 29 40 58
ModificadorArgumento : 87
ParteElse            : 9
Programa             : 0
SimboloCondicional   : 25
Termo                : 59 60 61 66 67
Tipo                 : 8 13 87
UseList              : 10 20
Variaveis            : 13 35
Variavel_array       : 39
While                : 41

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (12) Programa -> . PROGRAM ID ; Duses GlobalInsts BlocoPrincipal .

    PROGRAM         shift and go to state 2

    Programa                       shift and go to state 1

state 1

    (0) S' -> Programa .



state 2

    (12) Programa -> PROGRAM . ID ; Duses GlobalInsts BlocoPrincipal .

    ID              shift and go to state 3


state 3

    (12) Programa -> PROGRAM ID . ; Duses GlobalInsts BlocoPrincipal .

    ;               shift and go to state 4


state 4

    (12) Programa -> PROGRAM ID ; . Duses GlobalInsts BlocoPrincipal .
    (10) Duses -> . USES UseList ;
    (11) Duses -> .

    USES            shift and go to state 6
    BEGIN           reduce using rule 11 (Duses -> .)
    VAR             reduce using rule 11 (Duses -> .)
    FUNCTION        reduce using rule 11 (Duses -> .)
    PROCEDURE       reduce using rule 11 (Duses -> .)

    Duses                          shift and go to state 5

state 5

    (12) Programa -> PROGRAM ID ; Duses . GlobalInsts BlocoPrincipal .
    (23) GlobalInsts -> . GlobalInsts GlobalInst
    (24) GlobalInsts -> .

    BEGIN           reduce using rule 24 (GlobalInsts -> .)
    VAR             reduce using rule 24 (GlobalInsts -> .)
    FUNCTION        reduce using rule 24 (GlobalInsts -> .)
    PROCEDURE       reduce using rule 24 (GlobalInsts -> .)

    GlobalInsts                    shift and go to state 7

state 6

    (10) Duses -> USES . UseList ;
    (20) UseList -> . UseList , ID
    (21) UseList -> . ID

    ID              shift and go to state 9

    UseList                        shift and go to state 8

state 7

    (12) Programa -> PROGRAM ID ; Duses GlobalInsts . BlocoPrincipal .
    (23) GlobalInsts -> GlobalInsts . GlobalInst
    (40) BlocoPrincipal -> . BEGIN LocalInstsList END
    (31) GlobalInst -> . Dvariaveis
    (32) GlobalInst -> . Dfuncao
    (33) GlobalInst -> . Dprocedimento
    (1) Dvariaveis -> . VAR Listavariaveis
    (8) Dfuncao -> . FUNCTION ID ArgumentosSetter : Tipo ; GlobalInsts BEGIN LocalInstsList END ;
    (22) Dprocedimento -> . PROCEDURE ID ArgumentosProcedimentoOpc ; GlobalInsts BEGIN LocalInstsList END ;

    BEGIN           shift and go to state 12
    VAR             shift and go to state 16
    FUNCTION        shift and go to state 17
    PROCEDURE       shift and go to state 18

    BlocoPrincipal                 shift and go to state 10
    GlobalInst                     shift and go to state 11
    Dvariaveis                     shift and go to state 13
    Dfuncao                        shift and go to state 14
    Dprocedimento                  shift and go to state 15

state 8

    (10) Duses -> USES UseList . ;
    (20) UseList -> UseList . , ID

    ;               shift and go to state 19
    ,               shift and go to state 20


state 9

    (21) UseList -> ID .

    ;               reduce using rule 21 (UseList -> ID .)
    ,               reduce using rule 21 (UseList -> ID .)


state 10

    (12) Programa -> PROGRAM ID ; Duses GlobalInsts BlocoPrincipal . .

    .               shift and go to state 21


state 11

    (23) GlobalInsts -> GlobalInsts GlobalInst .

    BEGIN           reduce using rule 23 (GlobalInsts -> GlobalInsts GlobalInst .)
    VAR             reduce using rule 23 (GlobalInsts -> GlobalInsts GlobalInst .)
    FUNCTION        reduce using rule 23 (GlobalInsts -> GlobalInsts GlobalInst .)
    PROCEDURE       reduce using rule 23 (GlobalInsts -> GlobalInsts GlobalInst .)


state 12

    (40) BlocoPrincipal -> BEGIN . LocalInstsList END
    (3) LocalInstsList -> . LocalInstsList ; Instrucao
    (19) LocalInstsList -> . LocalInstsList ;
    (34) LocalInstsList -> . Instrucao
    (41) Instrucao -> . While
    (42) Instrucao -> . InstrucaoCondicional
    (43) Instrucao -> . Bloco
    (44) Instrucao -> . Atribuicao
    (45) Instrucao -> . Expressao
    (15) While -> . WHILE
    (9) InstrucaoCondicional -> . IF Condicao THEN BlocoCondicional ParteElse
    (58) Bloco -> . BEGIN LocalInstsList END
    (2) Atribuicao -> . Atribuido : = Expressao
    (59) Expressao -> . Expressao + Termo
    (60) Expressao -> . Expressao - Termo
    (61) Expressao -> . Termo
    (16) Atribuido -> . ID
    (17) Atribuido -> . Acesso_array
    (66) Termo -> . Termo * Fator
    (67) Termo -> . Termo / Fator
    (68) Termo -> . Fator
    (39) Acesso_array -> . Variavel_array [ Expressao ]
    (78) Fator -> . ID
    (79) Fator -> . REAL
    (80) Fator -> . INTEGER
    (81) Fator -> . STRING
    (82) Fator -> . TRUE
    (83) Fator -> . FALSE
    (84) Fator -> . ( Expressao )
    (85) Fator -> . Condicao
    (86) Fator -> . Acesso_array
    (91) Fator -> . ID ArgumentosGetter
    (46) Variavel_array -> . ID
    (47) Variavel_array -> . Acesso_array
    (4) Condicao -> . Condicao AND DeclaracaoCondicao
    (5) Condicao -> . Condicao OR DeclaracaoCondicao
    (6) Condicao -> . DeclaracaoCondicao
    (7) Condicao -> . ( Condicao )
    (25) DeclaracaoCondicao -> . Expressao SimboloCondicional Expressao
    (26) DeclaracaoCondicao -> . NOT Condicao
    (27) DeclaracaoCondicao -> . TRUE
    (28) DeclaracaoCondicao -> . FALSE

    WHILE           shift and go to state 30
    IF              shift and go to state 31
    BEGIN           shift and go to state 22
    ID              shift and go to state 35
    REAL            shift and go to state 39
    INTEGER         shift and go to state 40
    STRING          shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    (               shift and go to state 44
    NOT             shift and go to state 46

    LocalInstsList                 shift and go to state 23
    Instrucao                      shift and go to state 24
    While                          shift and go to state 25
    InstrucaoCondicional           shift and go to state 26
    Bloco                          shift and go to state 27
    Atribuicao                     shift and go to state 28
    Expressao                      shift and go to state 29
    Condicao                       shift and go to state 32
    Atribuido                      shift and go to state 33
    Termo                          shift and go to state 34
    Acesso_array                   shift and go to state 36
    Fator                          shift and go to state 37
    Variavel_array                 shift and go to state 38
    DeclaracaoCondicao             shift and go to state 45

state 13

    (31) GlobalInst -> Dvariaveis .

    BEGIN           reduce using rule 31 (GlobalInst -> Dvariaveis .)
    VAR             reduce using rule 31 (GlobalInst -> Dvariaveis .)
    FUNCTION        reduce using rule 31 (GlobalInst -> Dvariaveis .)
    PROCEDURE       reduce using rule 31 (GlobalInst -> Dvariaveis .)


state 14

    (32) GlobalInst -> Dfuncao .

    BEGIN           reduce using rule 32 (GlobalInst -> Dfuncao .)
    VAR             reduce using rule 32 (GlobalInst -> Dfuncao .)
    FUNCTION        reduce using rule 32 (GlobalInst -> Dfuncao .)
    PROCEDURE       reduce using rule 32 (GlobalInst -> Dfuncao .)


state 15

    (33) GlobalInst -> Dprocedimento .

    BEGIN           reduce using rule 33 (GlobalInst -> Dprocedimento .)
    VAR             reduce using rule 33 (GlobalInst -> Dprocedimento .)
    FUNCTION        reduce using rule 33 (GlobalInst -> Dprocedimento .)
    PROCEDURE       reduce using rule 33 (GlobalInst -> Dprocedimento .)


state 16

    (1) Dvariaveis -> VAR . Listavariaveis
    (13) Listavariaveis -> . Listavariaveis Variaveis : Tipo ;
    (14) Listavariaveis -> .

    ID              reduce using rule 14 (Listavariaveis -> .)
    BEGIN           reduce using rule 14 (Listavariaveis -> .)
    VAR             reduce using rule 14 (Listavariaveis -> .)
    FUNCTION        reduce using rule 14 (Listavariaveis -> .)
    PROCEDURE       reduce using rule 14 (Listavariaveis -> .)

    Listavariaveis                 shift and go to state 47

state 17

    (8) Dfuncao -> FUNCTION . ID ArgumentosSetter : Tipo ; GlobalInsts BEGIN LocalInstsList END ;

    ID              shift and go to state 48


state 18

    (22) Dprocedimento -> PROCEDURE . ID ArgumentosProcedimentoOpc ; GlobalInsts BEGIN LocalInstsList END ;

    ID              shift and go to state 49


state 19

    (10) Duses -> USES UseList ; .

    BEGIN           reduce using rule 10 (Duses -> USES UseList ; .)
    VAR             reduce using rule 10 (Duses -> USES UseList ; .)
    FUNCTION        reduce using rule 10 (Duses -> USES UseList ; .)
    PROCEDURE       reduce using rule 10 (Duses -> USES UseList ; .)


state 20

    (20) UseList -> UseList , . ID

    ID              shift and go to state 50


state 21

    (12) Programa -> PROGRAM ID ; Duses GlobalInsts BlocoPrincipal . .

    $end            reduce using rule 12 (Programa -> PROGRAM ID ; Duses GlobalInsts BlocoPrincipal . .)


state 22

    (58) Bloco -> BEGIN . LocalInstsList END
    (3) LocalInstsList -> . LocalInstsList ; Instrucao
    (19) LocalInstsList -> . LocalInstsList ;
    (34) LocalInstsList -> . Instrucao
    (41) Instrucao -> . While
    (42) Instrucao -> . InstrucaoCondicional
    (43) Instrucao -> . Bloco
    (44) Instrucao -> . Atribuicao
    (45) Instrucao -> . Expressao
    (15) While -> . WHILE
    (9) InstrucaoCondicional -> . IF Condicao THEN BlocoCondicional ParteElse
    (58) Bloco -> . BEGIN LocalInstsList END
    (2) Atribuicao -> . Atribuido : = Expressao
    (59) Expressao -> . Expressao + Termo
    (60) Expressao -> . Expressao - Termo
    (61) Expressao -> . Termo
    (16) Atribuido -> . ID
    (17) Atribuido -> . Acesso_array
    (66) Termo -> . Termo * Fator
    (67) Termo -> . Termo / Fator
    (68) Termo -> . Fator
    (39) Acesso_array -> . Variavel_array [ Expressao ]
    (78) Fator -> . ID
    (79) Fator -> . REAL
    (80) Fator -> . INTEGER
    (81) Fator -> . STRING
    (82) Fator -> . TRUE
    (83) Fator -> . FALSE
    (84) Fator -> . ( Expressao )
    (85) Fator -> . Condicao
    (86) Fator -> . Acesso_array
    (91) Fator -> . ID ArgumentosGetter
    (46) Variavel_array -> . ID
    (47) Variavel_array -> . Acesso_array
    (4) Condicao -> . Condicao AND DeclaracaoCondicao
    (5) Condicao -> . Condicao OR DeclaracaoCondicao
    (6) Condicao -> . DeclaracaoCondicao
    (7) Condicao -> . ( Condicao )
    (25) DeclaracaoCondicao -> . Expressao SimboloCondicional Expressao
    (26) DeclaracaoCondicao -> . NOT Condicao
    (27) DeclaracaoCondicao -> . TRUE
    (28) DeclaracaoCondicao -> . FALSE

    WHILE           shift and go to state 30
    IF              shift and go to state 31
    BEGIN           shift and go to state 22
    ID              shift and go to state 35
    REAL            shift and go to state 39
    INTEGER         shift and go to state 40
    STRING          shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    (               shift and go to state 44
    NOT             shift and go to state 46

    LocalInstsList                 shift and go to state 51
    Instrucao                      shift and go to state 24
    While                          shift and go to state 25
    InstrucaoCondicional           shift and go to state 26
    Bloco                          shift and go to state 27
    Atribuicao                     shift and go to state 28
    Expressao                      shift and go to state 29
    Condicao                       shift and go to state 32
    Atribuido                      shift and go to state 33
    Termo                          shift and go to state 34
    Acesso_array                   shift and go to state 36
    Fator                          shift and go to state 37
    Variavel_array                 shift and go to state 38
    DeclaracaoCondicao             shift and go to state 45

state 23

    (40) BlocoPrincipal -> BEGIN LocalInstsList . END
    (3) LocalInstsList -> LocalInstsList . ; Instrucao
    (19) LocalInstsList -> LocalInstsList . ;

    END             shift and go to state 52
    ;               shift and go to state 53


state 24

    (34) LocalInstsList -> Instrucao .

    END             reduce using rule 34 (LocalInstsList -> Instrucao .)
    ;               reduce using rule 34 (LocalInstsList -> Instrucao .)
    ELSE            reduce using rule 34 (LocalInstsList -> Instrucao .)


state 25

    (41) Instrucao -> While .

    END             reduce using rule 41 (Instrucao -> While .)
    ;               reduce using rule 41 (Instrucao -> While .)
    ELSE            reduce using rule 41 (Instrucao -> While .)


state 26

    (42) Instrucao -> InstrucaoCondicional .

    END             reduce using rule 42 (Instrucao -> InstrucaoCondicional .)
    ;               reduce using rule 42 (Instrucao -> InstrucaoCondicional .)
    ELSE            reduce using rule 42 (Instrucao -> InstrucaoCondicional .)


state 27

    (43) Instrucao -> Bloco .

    END             reduce using rule 43 (Instrucao -> Bloco .)
    ;               reduce using rule 43 (Instrucao -> Bloco .)
    ELSE            reduce using rule 43 (Instrucao -> Bloco .)


state 28

    (44) Instrucao -> Atribuicao .

    END             reduce using rule 44 (Instrucao -> Atribuicao .)
    ;               reduce using rule 44 (Instrucao -> Atribuicao .)
    ELSE            reduce using rule 44 (Instrucao -> Atribuicao .)


state 29

    (45) Instrucao -> Expressao .
    (59) Expressao -> Expressao . + Termo
    (60) Expressao -> Expressao . - Termo
    (25) DeclaracaoCondicao -> Expressao . SimboloCondicional Expressao
    (48) SimboloCondicional -> . =
    (49) SimboloCondicional -> . < >
    (50) SimboloCondicional -> . < =
    (51) SimboloCondicional -> . <
    (52) SimboloCondicional -> . > =
    (53) SimboloCondicional -> . >

    END             reduce using rule 45 (Instrucao -> Expressao .)
    ;               reduce using rule 45 (Instrucao -> Expressao .)
    ELSE            reduce using rule 45 (Instrucao -> Expressao .)
    +               shift and go to state 54
    -               shift and go to state 55
    =               shift and go to state 57
    <               shift and go to state 58
    >               shift and go to state 59

    SimboloCondicional             shift and go to state 56

state 30

    (15) While -> WHILE .

    END             reduce using rule 15 (While -> WHILE .)
    ;               reduce using rule 15 (While -> WHILE .)
    ELSE            reduce using rule 15 (While -> WHILE .)


state 31

    (9) InstrucaoCondicional -> IF . Condicao THEN BlocoCondicional ParteElse
    (4) Condicao -> . Condicao AND DeclaracaoCondicao
    (5) Condicao -> . Condicao OR DeclaracaoCondicao
    (6) Condicao -> . DeclaracaoCondicao
    (7) Condicao -> . ( Condicao )
    (25) DeclaracaoCondicao -> . Expressao SimboloCondicional Expressao
    (26) DeclaracaoCondicao -> . NOT Condicao
    (27) DeclaracaoCondicao -> . TRUE
    (28) DeclaracaoCondicao -> . FALSE
    (59) Expressao -> . Expressao + Termo
    (60) Expressao -> . Expressao - Termo
    (61) Expressao -> . Termo
    (66) Termo -> . Termo * Fator
    (67) Termo -> . Termo / Fator
    (68) Termo -> . Fator
    (78) Fator -> . ID
    (79) Fator -> . REAL
    (80) Fator -> . INTEGER
    (81) Fator -> . STRING
    (82) Fator -> . TRUE
    (83) Fator -> . FALSE
    (84) Fator -> . ( Expressao )
    (85) Fator -> . Condicao
    (86) Fator -> . Acesso_array
    (91) Fator -> . ID ArgumentosGetter
    (39) Acesso_array -> . Variavel_array [ Expressao ]
    (46) Variavel_array -> . ID
    (47) Variavel_array -> . Acesso_array

    (               shift and go to state 61
    NOT             shift and go to state 46
    TRUE            shift and go to state 63
    FALSE           shift and go to state 64
    ID              shift and go to state 65
    REAL            shift and go to state 39
    INTEGER         shift and go to state 40
    STRING          shift and go to state 41

    Condicao                       shift and go to state 60
    DeclaracaoCondicao             shift and go to state 45
    Expressao                      shift and go to state 62
    Termo                          shift and go to state 34
    Fator                          shift and go to state 37
    Acesso_array                   shift and go to state 66
    Variavel_array                 shift and go to state 38

state 32

    (85) Fator -> Condicao .
    (4) Condicao -> Condicao . AND DeclaracaoCondicao
    (5) Condicao -> Condicao . OR DeclaracaoCondicao

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    *               reduce using rule 85 (Fator -> Condicao .)
    /               reduce using rule 85 (Fator -> Condicao .)
    +               reduce using rule 85 (Fator -> Condicao .)
    -               reduce using rule 85 (Fator -> Condicao .)
    =               reduce using rule 85 (Fator -> Condicao .)
    <               reduce using rule 85 (Fator -> Condicao .)
    >               reduce using rule 85 (Fator -> Condicao .)
    END             reduce using rule 85 (Fator -> Condicao .)
    ;               reduce using rule 85 (Fator -> Condicao .)
    ELSE            reduce using rule 85 (Fator -> Condicao .)
    THEN            reduce using rule 85 (Fator -> Condicao .)
    )               reduce using rule 85 (Fator -> Condicao .)
    ,               reduce using rule 85 (Fator -> Condicao .)
    ]               reduce using rule 85 (Fator -> Condicao .)
    AND             shift and go to state 67
    OR              shift and go to state 68

  ! AND             [ reduce using rule 85 (Fator -> Condicao .) ]
  ! OR              [ reduce using rule 85 (Fator -> Condicao .) ]


state 33

    (2) Atribuicao -> Atribuido . : = Expressao

    :               shift and go to state 69


state 34

    (61) Expressao -> Termo .
    (66) Termo -> Termo . * Fator
    (67) Termo -> Termo . / Fator

  ! shift/reduce conflict for * resolved as shift
  ! shift/reduce conflict for / resolved as shift
    +               reduce using rule 61 (Expressao -> Termo .)
    -               reduce using rule 61 (Expressao -> Termo .)
    =               reduce using rule 61 (Expressao -> Termo .)
    <               reduce using rule 61 (Expressao -> Termo .)
    >               reduce using rule 61 (Expressao -> Termo .)
    END             reduce using rule 61 (Expressao -> Termo .)
    ;               reduce using rule 61 (Expressao -> Termo .)
    )               reduce using rule 61 (Expressao -> Termo .)
    ELSE            reduce using rule 61 (Expressao -> Termo .)
    AND             reduce using rule 61 (Expressao -> Termo .)
    OR              reduce using rule 61 (Expressao -> Termo .)
    THEN            reduce using rule 61 (Expressao -> Termo .)
    ,               reduce using rule 61 (Expressao -> Termo .)
    ]               reduce using rule 61 (Expressao -> Termo .)
    *               shift and go to state 70
    /               shift and go to state 71

  ! *               [ reduce using rule 61 (Expressao -> Termo .) ]
  ! /               [ reduce using rule 61 (Expressao -> Termo .) ]


state 35

    (16) Atribuido -> ID .
    (78) Fator -> ID .
    (91) Fator -> ID . ArgumentosGetter
    (46) Variavel_array -> ID .
    (57) ArgumentosGetter -> . ( ArgumentosGetterBuffer )

    :               reduce using rule 16 (Atribuido -> ID .)
    *               reduce using rule 78 (Fator -> ID .)
    /               reduce using rule 78 (Fator -> ID .)
    +               reduce using rule 78 (Fator -> ID .)
    -               reduce using rule 78 (Fator -> ID .)
    =               reduce using rule 78 (Fator -> ID .)
    <               reduce using rule 78 (Fator -> ID .)
    >               reduce using rule 78 (Fator -> ID .)
    END             reduce using rule 78 (Fator -> ID .)
    ;               reduce using rule 78 (Fator -> ID .)
    ELSE            reduce using rule 78 (Fator -> ID .)
    [               reduce using rule 46 (Variavel_array -> ID .)
    (               shift and go to state 73

    ArgumentosGetter               shift and go to state 72

state 36

    (17) Atribuido -> Acesso_array .
    (86) Fator -> Acesso_array .
    (47) Variavel_array -> Acesso_array .

    :               reduce using rule 17 (Atribuido -> Acesso_array .)
    *               reduce using rule 86 (Fator -> Acesso_array .)
    /               reduce using rule 86 (Fator -> Acesso_array .)
    +               reduce using rule 86 (Fator -> Acesso_array .)
    -               reduce using rule 86 (Fator -> Acesso_array .)
    =               reduce using rule 86 (Fator -> Acesso_array .)
    <               reduce using rule 86 (Fator -> Acesso_array .)
    >               reduce using rule 86 (Fator -> Acesso_array .)
    END             reduce using rule 86 (Fator -> Acesso_array .)
    ;               reduce using rule 86 (Fator -> Acesso_array .)
    ELSE            reduce using rule 86 (Fator -> Acesso_array .)
    [               reduce using rule 47 (Variavel_array -> Acesso_array .)


state 37

    (68) Termo -> Fator .

    *               reduce using rule 68 (Termo -> Fator .)
    /               reduce using rule 68 (Termo -> Fator .)
    +               reduce using rule 68 (Termo -> Fator .)
    -               reduce using rule 68 (Termo -> Fator .)
    =               reduce using rule 68 (Termo -> Fator .)
    <               reduce using rule 68 (Termo -> Fator .)
    >               reduce using rule 68 (Termo -> Fator .)
    END             reduce using rule 68 (Termo -> Fator .)
    ;               reduce using rule 68 (Termo -> Fator .)
    )               reduce using rule 68 (Termo -> Fator .)
    ELSE            reduce using rule 68 (Termo -> Fator .)
    AND             reduce using rule 68 (Termo -> Fator .)
    OR              reduce using rule 68 (Termo -> Fator .)
    THEN            reduce using rule 68 (Termo -> Fator .)
    ,               reduce using rule 68 (Termo -> Fator .)
    ]               reduce using rule 68 (Termo -> Fator .)


state 38

    (39) Acesso_array -> Variavel_array . [ Expressao ]

    [               shift and go to state 74


state 39

    (79) Fator -> REAL .

    *               reduce using rule 79 (Fator -> REAL .)
    /               reduce using rule 79 (Fator -> REAL .)
    +               reduce using rule 79 (Fator -> REAL .)
    -               reduce using rule 79 (Fator -> REAL .)
    =               reduce using rule 79 (Fator -> REAL .)
    <               reduce using rule 79 (Fator -> REAL .)
    >               reduce using rule 79 (Fator -> REAL .)
    END             reduce using rule 79 (Fator -> REAL .)
    ;               reduce using rule 79 (Fator -> REAL .)
    )               reduce using rule 79 (Fator -> REAL .)
    ELSE            reduce using rule 79 (Fator -> REAL .)
    AND             reduce using rule 79 (Fator -> REAL .)
    OR              reduce using rule 79 (Fator -> REAL .)
    THEN            reduce using rule 79 (Fator -> REAL .)
    ,               reduce using rule 79 (Fator -> REAL .)
    ]               reduce using rule 79 (Fator -> REAL .)


state 40

    (80) Fator -> INTEGER .

    *               reduce using rule 80 (Fator -> INTEGER .)
    /               reduce using rule 80 (Fator -> INTEGER .)
    +               reduce using rule 80 (Fator -> INTEGER .)
    -               reduce using rule 80 (Fator -> INTEGER .)
    =               reduce using rule 80 (Fator -> INTEGER .)
    <               reduce using rule 80 (Fator -> INTEGER .)
    >               reduce using rule 80 (Fator -> INTEGER .)
    END             reduce using rule 80 (Fator -> INTEGER .)
    ;               reduce using rule 80 (Fator -> INTEGER .)
    )               reduce using rule 80 (Fator -> INTEGER .)
    ELSE            reduce using rule 80 (Fator -> INTEGER .)
    AND             reduce using rule 80 (Fator -> INTEGER .)
    OR              reduce using rule 80 (Fator -> INTEGER .)
    THEN            reduce using rule 80 (Fator -> INTEGER .)
    ,               reduce using rule 80 (Fator -> INTEGER .)
    ]               reduce using rule 80 (Fator -> INTEGER .)


state 41

    (81) Fator -> STRING .
